--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.14.9",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
     "nodemon": "^2.0.12",
-    "webpack": "^5.54.0",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.55.1",
     "webpack-cli": "^4.8.0"
   }
 }
