--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.14.9",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "mini-css-extract-plugin": "^2.3.0",
     "nodemon": "^2.0.12",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
